// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`communication/send-sms/plivo RetrieveMessageStatus should perform successfully 1`] = `
Ok {
  "value": Object {
    "deliveryStatus": "failed",
  },
}
`;

exports[`communication/send-sms/plivo SendMessage should perform successfully 1`] = `
Ok {
  "value": Object {
    "messageId": "9a220a60-3e11-11ec-9e36-0242ac110004",
  },
}
`;
